# difm-pls

./: README.md  README.rst  difm-pls.cabal  stack.yaml
src/: Main.hs
